Project/GpMessages/19037103643900
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Monday, 28 October 2024 11:37:34</msg><msg code="-2147467259" type="100">﻿  File "E:\git\LevellingThesis\Code\ResearchToolbox.atbx\Script.tool\tool.script.execute.py", line 18
    AddMessage(fr"{}")
                     ^
﻿SyntaxError: f-string: empty expression not allowed
</msg><msg code="0" type="0">Failed script Script...</msg><msg code="-2147467259" type="100">Failed to execute (Script).</msg><msg code="0" type="3">Failed at Monday, 28 October 2024 11:37:34 (Elapsed Time: 0.55 seconds)</msg></messages>